--- a/app/http/css/scheduling.css
+++ b/app/http/css/scheduling.css
@@ -4,7 +4,8 @@ body {
 }
 :root {
     --padding: 5px;
-    --minimalWidthInMinutes: calc(30 * (100% - 2 * var(--padding) ) / 24 / 60);
+    --minimalWidthInMinutes: 30;
+    --minimalWidth: calc(var(--minimalWidthInMinutes) * (100% - 2 * var(--padding) ) / 24 / 60);
     --height: 25px;        
     --radius: 3px; 
 }
