--- a/app/http/css/scheduling.css
+++ b/app/http/css/scheduling.css
@@ -3,6 +3,35 @@ body {
     font-size: 0.8em;
     margin: var(--body-margin);
 }
+.section {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    display:inline-block;
+    width: 96%;
+    margin: 0px 1% 10px 1%;
+    padding: 5px;
+}
+.action {
+    height: 20px;
+    cursor: pointer;
+    padding: 10px 5px 5px 5px;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.signin {
+    width: 75%;
+    margin: 25px 10% 10px 10%;
+}
+#signin {
+    width: 150px;
+}
+
+
 :root {
     --body-margin: 5px;
     --padding: 5px;
