--- a/app/web/scheduling.css
+++ b/app/web/scheduling.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #e3e5e8;
     font-family: Arial, sans-serif;
     font-size: 0.8em;
     margin: var(--body-margin);
@@ -53,6 +54,7 @@ body {
     --timelineHeigth: 20px;
 }
 .container {
+    margin-top: 25px;
     padding-left: 0px;
     padding-top: 0px;
 }
