--- a/app/web/scheduling.css
+++ b/app/web/scheduling.css
@@ -88,6 +88,7 @@ yop-calendar-event {
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 992px) {
