--- a/app/web/scheduling.css
+++ b/app/web/scheduling.css
@@ -41,58 +41,39 @@ body {
     margin-left: 25%;
 }
 
-resources {
-    background-color: bisque;  
+timeline, resources, events {
     display: block;
     position: relative;
-    top: var(--timelineHeigth);
-    left: 0px;
-    width: var(--resourceAreaWidth);
 }
 timeline {
     background-color: lightskyblue;
-    display: block;
-    position: relative;
-    top: 0px;
-    left: var(--resourceAreaWidth);
-    width: var(--agendaAreaWidth);
     height: var(--timelineHeigth);
+}
+resources {
+    background-color: lightseagreen;
 }
 events {
     background-color: bisque;  
-    display: block;
-    position: relative;
-    top: 0px;
-    left: var(--resourceAreaWidth);
-    width: var(--agendaAreaWidth);
 }
-yop-timeline-marker {
-    display: block;
+yop-timeline-marker, yop-calendar-resource, yop-calendar-event {
+    display: inline;
     position: absolute;
-    top: var(--padding);
 }
 yop-calendar-resource {
     background-color: lightseagreen;
-    display: inline-block;
-    position: absolute;
-    left: 0px;
-    width: 100%;
     height: var(--height);
-    white-space: nowrap; 
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
+    width: 100%;
 }
 yop-calendar-event {
     background-color: lightsalmon;
-    display: block;
-    position: absolute;   
     height: var(--height);  
     border-radius: var(--radius);
+    cursor: pointer;
+}
+yop-calendar-resource, yop-calendar-event {
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
-    cursor: pointer;
 }
 
 @media screen and (max-width: 992px) {
@@ -103,7 +84,7 @@ yop-calendar-event {
         --timelineHeigth: 40px;
         }
     body, input, button {
-        font-size: 30px;
+        font-size: 25px;
     }
     .login-form {
         width: 75%;
