--- a/app/web/scheduling.css
+++ b/app/web/scheduling.css
@@ -4,10 +4,12 @@
     --padding: 5px;
     --border-size: 1px;
 
+    --opening-hours-start: 0;
+    --opening-hours-end: 24;
     --resourceAreaWidth: 15%;
     --agendaAreaWidth: calc(100% - var(--resourceAreaWidth));
     --minimalWidthInMinutes: 30;
-    --minimalWidth: calc(var(--minimalWidthInMinutes) * (100% - 2 * var(--padding)) / 24 / 60);
+    --minimalWidth: calc(var(--minimalWidthInMinutes) * (100% - 2 * var(--padding)) / (var(--opening-hours-end) - var(--opening-hours-start)) / 60);
     --height: 25px;        
     --radius: 3px;
     --timelineHeigth: 25px;
