--- a/app/web/scheduling.css
+++ b/app/web/scheduling.css
@@ -23,12 +23,16 @@
     --background-event: var(--background-resource);
     --background-delete: var(--color-red);
     --background-menu: white;
+    --background-success: var(--color-status-green);
+    --background-error: var(--color-red);
+    --color-success: black;
+    --color-error: white;
     --color-red: tomato;
     --color-header: white;
     --color-border: black;
     --color-resource: white;
     --color-event: white;
-    --color-status-green: lightgreen;
+    --color-status-green: MediumAquamarine;
     --color-status-red: var(--color-red);
     --color-status-unknown: lightgray;
     --color-add-ressource: var(--background-resource);
